2011-03-02  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        * platform/chromium/test_expectations.txt:
          Mark fast/forms/input-number-unacceptable-style.html as TEXT.

2011-03-02  Kent Tamura  <tkent@chromium.org>

        Unreviewed.

        Update a test and test expectation for r80096.

        * fast/forms/input-number-unacceptable-style-expected.txt:
        * fast/forms/input-number-unacceptable-style.html:
          ICU seems to accept "-1+" as a number.  So change it to "-1a".
        * platform/chromium-linux/fast/speech/input-appearance-numberandspeech-expected.checksum:
        * platform/chromium-linux/fast/speech/input-appearance-numberandspeech-expected.png:
        * platform/chromium-linux/fast/speech/input-appearance-numberandspeech-expected.txt:
        * platform/chromium-mac/fast/speech/input-appearance-numberandspeech-expected.checksum:
        * platform/chromium-mac/fast/speech/input-appearance-numberandspeech-expected.png:
        * platform/chromium-mac/fast/speech/input-appearance-numberandspeech-expected.txt:
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.checksum:
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.png:
        * platform/chromium-win/fast/speech/input-appearance-numberandspeech-expected.txt:

2011-03-01  Anna Cavender  <annacc@chromium.org>

        Reviewed by Eric Carlson.

        Remove playing of video in media/video-replaces-poster.html and update text results.
        https://bugs.webkit.org/show_bug.cgi?id=54910

        * media/video-replaces-poster-expected.txt: Added.
        * media/video-replaces-poster.html:
        * platform/chromium-win/media/video-replaces-poster-expected.txt: Removed.
        * platform/gtk/media/video-replaces-poster-expected.txt: Removed.
        * platform/mac/media/video-replaces-poster-expected.txt: Removed.

2011-03-01  Kent Tamura  <tkent@chromium.org>
