@@ -3367,5 +3367,3 @@ BUGCR74519 : svg/custom/SVGPaint-mutate-attribute.svg = IMAGE+TEXT
 BUGCR74519 : svg/custom/SVGPaint-mutate-inline-style.svg = IMAGE+TEXT
 BUGCR74519 : svg/dom/SVGColor-expected.txt = IMAGE+TEXT
 BUGCR74519 : svg/dom/SVGPaint-expected.txt = IMAGE+TEXT
-
-BUGWK55562 : fast/forms/input-number-unacceptable-style.html = TEXT
